# CarSim

./: .gitignore  CMakeLists.txt  Cursor.hpp  Loop.cpp  Makefile  README.md  a.out  cursor.cpp  doc.txt  enemy.cpp  entity.cpp  entity.hpp  interface.cpp  interface.hpp  loop.cpp  main.cpp  map.cpp  map.hpp  player.cpp
Korczyk_Gabriel_Projekt/: README.md
Korczyk_Gabriel_Projekt/src/entities/: entity.hpp
Korczyk_Gabriel_Projekt/src/grid/: map.cpp
Korczyk_Gabriel_Projekt/src/render/: draw.cpp
headers/: cursor.hpp  enemy.hpp  engine.hpp  loop.hpp  map.hpp
src/entities/: enemy.cpp  entity.cpp  entity.hpp  player.cpp  player.hpp
src/fight/: draw_fight.cpp  draw_fight.h  fight.cpp  fight.h
src/game/: loop.cpp  loop.hpp
src/grid/: map.cpp  map.hpp
src/render/: draw.cpp  draw.hpp
src/window/: interface.cpp  interface.hpp  window.cpp  window.h
